# dovecot-libsodium-plugin

./: README.md  configure.ac
src/: Makefile.am  libsodium-plugin.c  libsodium-plugin.h
